--- a/server/views/partials/keypts.pug
+++ b/server/views/partials/keypts.pug
@@ -4,7 +4,7 @@
     div
       h3 Learn
       p
-        | Korea TESOL (aka KOTESOL) is an English teachers association dedicated to improving English language teaching and learning not only for our members but for all teachers in Korea, and beyond.
+        | Korea TESOL is an English teachers association dedicated to improving English language teaching and learning not only for our members but for all teachers in Korea, and beyond.
   .keypoint.key-two
     img(src='/img/icons/presentation.png', alt='Key icon two')
     div
