--- a/server/views/partials/schedule-grid.pug
+++ b/server/views/partials/schedule-grid.pug
@@ -2,7 +2,7 @@
 .conference-schedule.container
   header.title-bar
     h2.page-section-title Conference Schedule
-  .schedule
+  .schedule-grid
     // Row 1 - Headings
     p.day.no-border
     p.day.day-1 Onnuri
