--- a/server/views/partials/schedule-table.pug
+++ b/server/views/partials/schedule-table.pug
@@ -4,213 +4,251 @@
   table.schedule-section
     tr.schedule-header
       th.schedule-time Time
+      th.schedule-track Track
       th.schedule-session Session
       th.schedule-speaker Speaker
       th.schedule-venue Venue
-    tr
+    tr.main-event
       td.schedule-time 9:00 am
-      td.schedule-session(colspan='2') Registration
+      td.schedule-session(colspan='3') Registration
       td.schedule-venue Foyer
     //- 10:00
     tr
-      td.schedule-time(rowspan='7') 10:00 am
-      td.schedule-span(colspan='3')
+      td.schedule-time(rowspan='7') 
+        span 10:00 am
+      td.schedule-span(colspan='4')
         | Workshops I 
         span (50 min)
-    tr
+    tr.room1
+      td.schedule-track Track 1
       td.schedule-session
         a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact
       td.schedule-speaker J. Shea Lee
-      td.schedule-venue Room 1
-    tr
+      td.schedule-venue 103
+    tr.room2
+      td.schedule-track Track 2
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 104
+    tr.room3
+      td.schedule-track Track 3
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 201
+    tr.room4
+      td.schedule-track Track 4
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 202
+    tr.room5
+      td.schedule-track Track 5
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 203
+    tr.room6
+      td.schedule-track Track 6
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
+      td.schedule-venue 204
     //- 11:00
     tr
-      td.schedule-time(rowspan='7') 11:00 am
-      td.schedule-span(colspan='3')
+      td.schedule-time(rowspan='7') 
+        span 11:00 am
+      td.schedule-span(colspan='4')
         | Workshops II 
         span (50 min)
-    tr
+    tr.room1
+      td.schedule-track Track 1
       td.schedule-session
         a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact
       td.schedule-speaker J. Shea Lee
-      td.schedule-venue Room 1
-    tr
+      td.schedule-venue 103
+    tr.room2
+      td.schedule-track Track 2
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 104
+    tr.room3
+      td.schedule-track Track 3
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 201
+    tr.room4
+      td.schedule-track Track 4
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 202
+    tr.room5
+      td.schedule-track Track 5
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 203
+    tr.room6
+      td.schedule-track Track 6
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
+      td.schedule-venue 204
     //- Lunch (12:00)
     tr
       td.schedule-time 12:00 pm
-      td.schedule-span(colspan='3')
+      td.schedule-span(colspan='4')
         | Lunch Break 
         span (60 min)
     //- Plenary (1:00)
-    tr
+    tr.main-event
       td.schedule-time 1:00 pm
-      td.schedule-session(colspan='2') Plenary Session
+      td.schedule-track Plenary Session
+      td.schedule-session Teacher Identity in Language Teaching
+      td.schedule-speaker Jack C. Richards
       td.schedule-venue Onnuri Hall
     //- 2:00
     tr
-      td.schedule-time(rowspan='7') 2:00 pm
-      td.schedule-span(colspan='3')
+      td.schedule-time(rowspan='7') 
+        span 2:00 pm
+      td.schedule-span(colspan='4')
         | Workshops III 
         span (50 min)
-    tr
+    tr.room1
+      td.schedule-track Track 1
       td.schedule-session
         a(href='/speakers/Jeffrey_Shelley') Anthropology: Building a Class Culture with Impact
       td.schedule-speaker J. Shea Lee
-      td.schedule-venue Room 1
-    tr
+      td.schedule-venue 103
+    tr.room2
+      td.schedule-track Track 2
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 104
+    tr.room3
+      td.schedule-track Track 3
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 201
+    tr.room4
+      td.schedule-track Track 4
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 202
+    tr.room5
+      td.schedule-track Track 5
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 203
+    tr.room6
+      td.schedule-track Track 6
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
+      td.schedule-venue 204
     //- 3:00
     tr
-      td.schedule-time(rowspan='7') 3:00 pm
-      td.schedule-span(colspan='3')
+      td.schedule-time(rowspan='7') 
+        span 3:00 pm
+      td.schedule-span(colspan='4')
         | Workshops IV 
         span (50 min)
-    tr
+    tr.room1
+      td.schedule-track Track 1
       td.schedule-session
         a(href='/speakers/Luis_Caballero') Using Critical Pedagogy in the EFL Classroom
       td.schedule-speaker Luis Caballero
-      td.schedule-venue Room 1
-    tr
+      td.schedule-venue 103
+    tr.room2
+      td.schedule-track Track 2
       td.schedule-session
         a(href='/speakers/Rhea_Metituk') Integration Station &ndash; Increasing Student Talking time &amp; Spicing up the Classroom
       td.schedule-speaker Rhea Metituk
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 104
+    tr.room3
+      td.schedule-track Track 3
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 201
+    tr.room4
+      td.schedule-track Track 4
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 202
+    tr.room5
+      td.schedule-track Track 5
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 203
+    tr.room6
+      td.schedule-track Track 6
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
+      td.schedule-venue 204
     //- 4:00
     tr
-      td.schedule-time(rowspan='7') 4:00 pm
-      td.schedule-span(colspan='3')
-        | Workshops V
+      td.schedule-time(rowspan='7') 
+        span 4:00 pm
+      td.schedule-span(colspan='4')
+        | Workshops V 
         span (50 min)
-    tr
+    tr.room1
+      td.schedule-track Track 1
       td.schedule-session
         a(href='/speakers/Maria_Lisak') Snowstorms &amp; Cheatsheets - End of Term Reflection
       td.schedule-speaker Maria Lisak
-      td.schedule-venue Room 1
-    tr
+      td.schedule-venue 103
+    tr.room2
+      td.schedule-track Track 2
       td.schedule-session
         a(href='/speakers/Aaron_Snowberger') Atomic Habits that will turn you into a Superhero
       td.schedule-speaker Aaron Snowberger
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 104
+    tr.room3
+      td.schedule-track Track 3
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 201
+    tr.room
+      td.schedule-track Track 4
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 202
+    tr.room
+      td.schedule-track Track 5
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
-    tr
+      td.schedule-venue 203
+    tr.room
+      td.schedule-track Track 6
       td.schedule-session
         a(href='/speakers/Paul_Johnson') To Be Rather than to Seem: Teaching Tips from a Punk Existentialist
       td.schedule-speaker Paul Johnson
-      td.schedule-venue Room 2
+      td.schedule-venue 204
     //- Closing
-    tr
+    tr.main-event
       td.schedule-time 4:50 pm
-      td.schedule-session(colspan='2') Closing Ceremony
+      td.schedule-session(colspan='3') Closing Ceremony
       td.schedule-venue Onnuri Hall
     tr
       td.schedule-time(rowspan='2') 5:00 pm
-      td.schedule-span(colspan='3') After party &amp; dinner
-    tr
-      td.schedule-session(colspan='2') Restaurant in Shinshikaji
+      td.schedule-span(colspan='4') After party &amp; dinner
+    tr.main-event
+      td.schedule-session(colspan='3') Restaurant in Shinshikaji
       td.schedule-venue TBA
   p.info Tentative schedule. Times subject to change without notice.
