--- a/server/views/partials/whatis.pug
+++ b/server/views/partials/whatis.pug
@@ -5,7 +5,7 @@ section.whatis
         h2.section-title What is KOTESOL?
       dd
         p
-          | KOTESOL is a non-profit, professional organization that
+          | Korea TTESOL is a non-profit, professional organization that
           | seeks to assist teachers in self-development and improve
           | English Language Teaching in Korea. At the JNJ Regional
           | Conference, prepare to &quot;Learn - Share - Succeed.&quot;
