--- a/public/css/schedule-grid.css
+++ b/public/css/schedule-grid.css
@@ -121,7 +121,7 @@ img {
   letter-spacing: 7px; */
 }
 
-.schedule {
+.schedule-grid {
   display: grid;
   grid-template-columns: 80px 20% 20% 20% 20% 20%;
   grid-template-rows: 50px 30px 7% 7% 7% 7% 7% 7% 7% 7% 7% 7% 7% 7% 7% 7%;
