[feat] Build SpeakerService to handle fetching JSON or DB data

--- a/server/views/layout/includes/footer.pug
+++ b/server/views/layout/includes/footer.pug
@@ -52,6 +52,7 @@ footer.site-credits
         a(href='https://aaron.kr') Aaron Snowberger
         |  / Inspired by 
         a(href='https://websummit.com/') Web Summit 2018
+      span.render-time=renderTime
     p.credits
       span
         | Brain image by 
