--- a/server/views/partials/whatis.pug
+++ b/server/views/partials/whatis.pug
@@ -1,11 +1,11 @@
 section.whatis
-  .container
+  .container.small
     dl.whatiskotesol
       dt
         h2.section-title What is KOTESOL?
       dd
         p
-          | Korea TTESOL is a non-profit, professional organization that
+          | Korea TESOL is a non-profit, professional organization that
           | seeks to assist teachers in self-development and improve
           | English Language Teaching in Korea. At the JNJ Regional
           | Conference, prepare to &quot;Learn - Share - Succeed.&quot;
