--- a/server/views/layout/includes/html-head.pug
+++ b/server/views/layout/includes/html-head.pug
@@ -1,4 +1,5 @@
-title #{siteTitle} - #{pageTitle}
+//- title=siteTitle
+title #{siteTitle} - #{page}
 link(rel='shortcut icon', href='./img/jnj-favicon-4.png', type='image/png')
 //- link(rel='stylesheet', href='./css/style.css', type='text/css')
 link(rel='stylesheet', href='./css/new-style.css', type='text/css')
