[feat] Build dynamic pages for Speaker single, grid, etc

--- a/public/css/new-style.css
+++ b/public/css/new-style.css
@@ -1456,7 +1456,7 @@ a.ticket-button {
   max-width: 100%;
   /* margin: auto; */
 /*   color: white; */
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 .grid-item:hover .speaker-meta {
