--- a/server/views/layout/includes/html-head.pug
+++ b/server/views/layout/includes/html-head.pug
@@ -1,9 +1,9 @@
 //- title=siteTitle
 title #{siteTitle} - #{page}
-link(rel='shortcut icon', href='./img/jnj-favicon-4.png', type='image/png')
-//- link(rel='stylesheet', href='./css/style.css', type='text/css')
-link(rel='stylesheet', href='./css/new-style.css', type='text/css')
-link(rel='stylesheet', href='./css/schedule-grid.css', type='text/css')
+link(rel='shortcut icon', href='/img/jnj-favicon-4.png', type='image/png')
+//- link(rel='stylesheet', href='/css/style.css', type='text/css')
+link(rel='stylesheet', href='/css/new-style.css', type='text/css')
+link(rel='stylesheet', href='/css/schedule-grid.css', type='text/css')
 meta(name='viewport', content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700' type='text/css')
 link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i' type='text/css')
