--- a/server/views/partials/speaker-grid.pug
+++ b/server/views/partials/speaker-grid.pug
@@ -5,33 +5,35 @@
     .grid-item.grid-title
       .grid-inner
         a(href='/speakers') Speakers
-    // <article class="speaker">
-    .grid-item.photo
-      .grid-inner(style="background-image: url('/img/people/#')")
-        .attendee-img-shadow
-        .attendee-img-shadow-yellow
-        .speaker-meta-box
-          .speaker-meta.grid-layout
-            a(href='/speakers/#')
-              p.speaker-name #
-            p.speaker-affiliation #
-            p.speaker-details #
-    .speaker-info-section
-      article.speaker
-        .speaker-info-section
-          .speaker-meta
-            p.speaker-name
-              a(href='/speakers/#') #
-            p.speaker-affiliation #
-            p.speaker-session
-              strong Talk / 
-              a(href='/speakers/#') #
-            p.speaker-abstract #
-      // </article>
-      .speaker-info
-        p.speaker-abstract #
-        h2.speaker-bio-title About #
-        p.speaker-bio #
+    each speaker in speakers
+      // <article class="speaker">
+      .grid-item.photo
+        .grid-inner(style=`background-image: url('/img/people/${speaker.img}')`)
+          .attendee-img-shadow
+          .attendee-img-shadow-yellow
+          .speaker-meta-box
+            .speaker-meta.grid-layout
+              a(href=`/speakers/${speaker.shortname}`)
+                p.speaker-name=speaker.name
+              p.speaker-affiliation=speaker.affiliation
+              p.speaker-details=speaker.details
+
+      .speaker-info-section
+        article.speaker
+          .speaker-info-section
+            .speaker-meta
+              p.speaker-name
+                a(href=`/speakers/${speaker.shortname}`) #
+              p.speaker-affiliation=speaker.affiliation
+              p.speaker-session
+                strong Talk / 
+                a(href=`/speakers/${speaker.shortname}`) #
+              p.speaker-abstract=speaker.abstract
+        // </article>
+        .speaker-info
+          p.speaker-abstract=speaker.abstract
+          h2.speaker-bio-title About #{speaker.name}
+          p.speaker-bio=speaker.bio
     // .speaker-details
     .speaker-grid-last
       .testimonial
