--- a/server/views/partials/speaker-list.pug
+++ b/server/views/partials/speaker-list.pug
@@ -7,11 +7,12 @@
           <div class="grid-item grid-title">
           <div class="grid-inner"><a href="/speakers"><span>More</span> Speakers</a></div>
           </div>
-        .grid-item.photo
-          .grid-inner(style="background-image: url('/img/people/#')")
-            .speaker-meta-box
-              .speaker-meta
-                a(href='/speakers/#')
-                  p.speaker-name #
-                p.speaker-affiliation #
-                p.speaker-details #
+        each speaker in speakerNames
+          .grid-item.photo
+            .grid-inner(style="background-image: url('/img/people/#')")
+              .speaker-meta-box
+                .speaker-meta
+                  a(href=`/speakers/${speaker.shortname}`)
+                    p.speaker-name=speaker.name
+                  p.speaker-affiliation #
+                  p.speaker-details #
